Fix wrapping on the search bar div

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,7 @@ h6 {
 
 .search-bar {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
